# libglversion

./: Makefile.am  README.md  configure.ac
src/: .gitignore  libglversion-private.h  libglversion.c  libglversion.pc.in  libglversion.sym  test-libglversion.c
